force-app/main/default/objects/Forecast_Category__c/Forecast_Category__c.object-meta.xml
<CustomObject>
    <description>Defines a forecast category within a Forecast Configuration, such as Pipeline, Best Case, Commit, or Closed.</description>
    <label>Forecast Category</label>
    <nameField><label>Forecast Category Name</label><type>Text</type></nameField>
    <pluralLabel>Forecast Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>