force-app/main/default/objects/Forecast_Category__c/fields/Auto_Set_On_Stage__c.field-meta.xml
<CustomField>
    <fullName>Auto_Set_On_Stage__c</fullName>
    <label>Auto Set On Stage</label>
    <type>Text</type>
    <length>100</length>
</CustomField>