force-app/main/default/objects/Forecast_Category__c/fields/Budget_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Equivalent__c</fullName>
    <label>Budget Equivalent</label>
    <type>Text</type>
    <length>50</length>
</CustomField>