force-app/main/default/objects/Forecast_Category__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <label>Category Label</label>
    <type>Text</type>
    <length>50</length>
</CustomField>