force-app/main/default/objects/Forecast_Category__c/fields/Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Color_Hex__c</fullName>
    <label>Color Hex</label>
    <type>Text</type>
    <length>7</length>
</CustomField>