force-app/main/default/objects/Forecast_Category__c/fields/Counts_Toward_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Stretch__c</fullName>
    <label>Counts Toward Stretch Forecast</label>
    <description
  >Phase C: Independent flag for Stretch Forecast totals. Counts_Toward_Target__c remains the canonical "Final Forecast" flag (no rename).</description>
    <inlineHelpText
  >Include this category in the Stretch Forecast total. Independent of "Counts Toward Target" (which drives Final Forecast).</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>