force-app/main/default/objects/Forecast_Category__c/fields/Counts_Toward_Target__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Target__c</fullName>
    <label>Counts Toward Target</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>