force-app/main/default/objects/Forecast_Category__c/fields/Is_High_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Confidence__c</fullName>
    <label>Is High Confidence</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>