force-app/main/default/objects/Forecast_Category__c/fields/Regression_Warning__c.field-meta.xml
<CustomField>
    <fullName>Regression_Warning__c</fullName>
    <label>Regression Warning</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>